fixed some spacing issues

--- a/css/general.css
+++ b/css/general.css
@@ -14,6 +14,16 @@ body {
 	margin: 0;
 }
 
+.clearfix:after,
+.clearfix:before {
+	content: " ";
+	display: table;
+}
+
+.clearfix:after {
+	clear: both;
+}
+
 html {
   margin: 0;
   padding: 0;
@@ -26,8 +36,50 @@ h1 {
 	margin: 0;
 }
 
+h2 {
+	margin: 0;
+	color: #66CCCC;
+}
+
 /* - - - - - - - - - - - - - - - - header - - - - - - - - - - - - - - - - */
-header {
+.masthead {
+	margin: 0;
+	position: relative;
+	background-color: #FFFFFF;
+}
+
+.masthead-top {
+	overflow: hidden;
+	position: relative;
+}
+
+.logo-wrapper {
+	margin: 0;
+	padding: 0;
+
+	font-size: 1rem;
+}
+
+.logo,
+.logo:link,
+.logo:visited {
+	float: left;
+	height: 70px;
+	margin: 0 10px 0 0;
+	padding: 0.25rem;
+	width: 80px;
+
+	background: transparent url("img/k-logo-simple.svg") no-repeat left top;
+	background-size: 80px auto;
+	border: 0;
+
+	font-size: 1.5rem;
+	line-height: 1.3;
+	text-indent: 100%;
+	white-space: nowrap;
+}
+
+/*header {
 	margin: 0;
 	padding: 0;
 	background-color: #FFFFFF;
@@ -38,9 +90,93 @@ header {
 	margin: 0.5em 0.5em 0 0.5em;
 	position: absolute;
 }
-
+*/
 .banner {
 	width: 100%;	
+}
+
+/* - - - - - - - - - - - - - - - navigation - - - - - - - - - - - - - - - */
+
+.nav-btn,
+.nav-btn:link,
+.nav-btn:visited {
+	bottom: 0;
+	height: 40px;
+	overflow: hidden;
+	position: absolute;
+	right: 0;
+	width: 46px;
+
+	background: transparent url("img/icons/icon-nav.svg") no-repeat 0 0;
+	border: 0;
+
+	text-indent: 100%;
+	white-space: nowrap;
+}
+
+.nav-btn:hover,
+.nav-btn:focus,
+.nav-btn:active {
+	background-color: #000;
+	background-position: 0 -40px;
+}
+
+.nav-btn[data-state="active"] {
+	background-color: #000;
+	background-position: -46px -40px;
+}
+
+.nav {
+	margin: 0 -10px;
+	overflow: hidden;
+	padding: 0;
+
+	background-color: #000;
+}
+
+.nav > ul {
+	margin: 0;
+	padding: 0.8rem 0;
+
+	list-style-type: none;
+	font-size: 1.25rem;
+}
+
+.nav a,
+.nav a:link,
+.nav a:visited {
+	display: block;
+	padding: 0.5rem 10px;
+
+	border: 0;
+
+	color: #e2e2e2;
+	text-decoration: none;
+}
+
+.nav a:hover,
+.nav a:focus,
+.nav a:active {
+	background-color: #222;
+
+	color: #66CCCC;
+}
+
+.nav-bottom {
+	margin: 0;
+}
+
+.nav-top {
+	max-height: 0;
+
+	-moz-transition: all 250ms linear;
+	-o-transition: all 250ms linear;
+	-webkit-transition: all 250ms linear;
+	transition: all 250ms linear;
+}
+
+.nav-top[data-state="expanded"] {
+	max-height: 14rem;
 }
 
 /* - - - - - - - - - - - - - - - - about - - - - - - - - - - - - - - - - */
@@ -54,8 +190,12 @@ header {
 	margin: 0;
 	color: #333333;
 }
+ 
+.about h2 {
+	color: #66CCCC;
+}
 
-/* - - - - - - - - - - - - - - - - about - - - - - - - - - - - - - - - - */
+/* - - - - - - - - - - - - - - - - what i do - - - - - - - - - - - - - - - - */
 
 h2 {
 	margin: 0;
@@ -69,13 +209,39 @@ h2 {
 
 .whatido h2, p {
 	margin: 0;
+}
+
+.whatido p {
 	color: #FFFFFF;
 }
 
+/* - - - - - - - - - - - - - - - - contact - - - - - - - - - - - - - - - - */
+
+.contact {
+	margin: 0;
+	padding: 1em;
+	background-color: #FFFFFF;
+}
+
+.contact p {
+	margin: 0;
+	color: #333333;
+}
+
+
 /* - - - - - - - - - - - - - - - - footer - - - - - - - - - - - - - - - - */
 
-.footer {
+/*.footer {
 	height: 15em;
+	background-color: #000000;
+}*/
+.top-link {
+	font-size: 0.875rem;
+	text-align: center;
+}
+
+.site-footer {
+	padding: 0 0 1rem;
 	background-color: #000000;
 }
 
